# MSE-CNN-Implementations

./: .gitignore  CustomDataset.py  Doxyfile  LICENSE  MSECNN.py  README.md  constants.py  dataset_utils.py  mainpage.md  pyproject.toml  requirements.txt  setup.cfg  train_model_utils.py  utils.py
RAISE_TEST/: README.md
code/: CustomDataset.py  dataset_utils.py  mod_struct.py  train_model_utils.py
code/usefull_scripts/: balance_data.py  eval_model_stg6.py  mod_struct.py
dataset/: README.md  processing_data_code.md
dataset_RAISE_TEST/: README.md
doc/html/: ____init_____8py.html  add___c_t_u__v3_8py.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_c_u_dataset_base.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_c_u_dataset_stg2_compl-members.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_c_u_dataset_stg5_compl.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_c_u_dataset_stg6_compl-members.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_c_u_dataset_stg6_compl.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_sampler_stg5-members.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_sampler_stg5.html  classmsecnn__raulkviana_1_1custom__dataset_1_1_sampler_stg6-members.html  classmsecnn__raulkviana_1_1dataset__utils_1_1_video_capture_y_u_v-members.html  classmsecnn__raulkviana_1_1dataset__utils_1_1_video_capture_y_u_v.html  constants_8py.html  encode__dataset_8py.html  (+39 more)
docs/: README.md
example_data/: README.md
model_coefficients/: README.md
pages_doxygen/: dataset.md  exampledatapage.md  mainpage.md  processing_data_code.md
useful_scripts/: add_CTU_v2.py  add_CTU_v3.py  balance_data.py  create_labels.py  create_labels_with_channels.py  encode_dataset.py  eval_model_stg6.py  eval_model_stg6_metrics.py  generate_dataset_types.py  get_cu_components.py  mod_struct.py  obtain_cch.py  train_stg6.py  train_stg6_cus_multi_batch_v3.py
usefull_scripts/: add_CTU_v2.py  add_CTU_v3.py  balance_data.py  create_labels.py  create_labels_with_channels.py  encode_dataset.py  eval_model_stg6_metrics.py  generate_dataset_types.py  get_cu_components.py  mod_struct.py  obtain_cch.py  train_stg6_cus_multi_batch_v3.py
(+504 files in other folders)
