[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msecnn_raulkviana"
version = "1.0"
authors =[
  { name="Raul Kevin Viana", email="raulviana@ua.pt" },
]
maintainers = [
  { name="Raul Kevin Viana", email="raulviana@ua.pt" },
]
description = "Code database with the implementation of MSE-CNN, from the paper 'DeepQTMT: A Deep Learning Approach for Fast QTMT-based CU Partition of Intra-mode VVC'"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8.10"
license = {file = "LICENSE"}
keywords = ["encoding", "vvc", "mse-cnn", "msecnn", "deepqtmt", "cnn", "rnn", "ai", "video"]
classifiers = ["Intended Audience :: Developers",
               "License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3.8"]
dependencies = [
  "torch==1.10.2",
  "numpy==1.21.5",
  "pandas==1.3.5",
  "seaborn==0.11.0",
  "sklearn==0.0",
  "matplotlib==3.3.1",
  "opencv-python==4.6.0.66",
  "torchvision==0.11.3",
  "torchaudio==0.10.2",
]

[project.urls]
repository = "https://github.com/raulkviana/MSE-CNN-Implementations"
# include the docs after

[tool.setuptools.metadata]
exclude = [
  "src/msecnn_raulkviana/useful_scripts"
]