[metadata]
name = msecnn
version = 1.0
author = Raul Kevin Viana
author_email = raulviana@ua.pt
description = Code database with the implementation of MSE-CNN, from the paper "DeepQTMT: A Deep Learning Approach for Fast QTMT-based CU Partition of Intra-mode VVC"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raulkviana/MSE-CNN-Implementations

[options]
packages = find:
install_requires =
  torch==1.10.2
  numpy==1.21.5
  pandas==1.3.5
  seaborn==0.11.0
  sklearn==0.0
  matplotlib==3.3.1
  opencv-python==4.6.0.66
  torchvision==0.11.3
  torchaudio==0.10.2

[options.packages.find]
exclude =
  useful_scripts

[options.classifiers]
Intended Audience :: Developers
License :: OSI Approved :: MIT License
Programming Language :: Python :: 3.8
